MODINV-1266: ECS | MARC holdings record cannot be opened via "quickMARC" after Ownership update (#856)
* MODSOURCE-921: ECS | MARC holdings record cannot be opened via "quickMARC" after Ownership update